employer module alignment issues

--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.css
@@ -48,11 +48,11 @@
 	display: contents !important;
 }
 .pj-titles{
-    padding: 5px 0;
+    padding: 10px 0;
     /* border-bottom: 1px solid #ffc0d8; */
 }
 .pj-titles-0{
-    padding: 5px 0 !important;
+    /*padding: 5px 0 !important;*/
     /* border-bottom: 1px solid #ffc0d8; */
 }
 .pj-titles  h6{
